--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "engines": {
-    "node": "22.1.0",
-    "npm": "10.7.0 "
+    "node": "18.16.0",
+    "npm": "9.5.1"
   },
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "concurrently": "^9.0.1",
-    "cookie-session": "^2.1.0",
-    "express": "^4.21.1",
-    "mongoose": "^8.7.3",
-    "nodemon": "^3.1.7",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.0",
+    "nodemon": "^2.0.22",
     "passport": "^0.5.3",
-    "passport-google-oauth20": "^2.0.0",
-    "stripe": "^17.2.1"
+    "passport-google-oauth20": "^2.0.0"
   }
 }
